prevent new entry from collapsing when empty

--- a/iwaswhere-web/resources/public/css/iwaswhere.css
+++ b/iwaswhere-web/resources/public/css/iwaswhere.css
@@ -369,6 +369,10 @@ button {
     min-height: 60px;
 }
 
+.entry pre {
+    min-height: 22px;
+}
+
 .entry .mention-link {
     font-style: italic;
     color: #007d4e;
